# filestorage-rust-rocket

./: .env  Cargo.toml  Rocket.toml  bashscript.sh  server_db.db  server_db.sqbpro
Uploads/: arpp.py  code.cpp  views.rs
migrations/2022-01-20-101726_enter_files/: down.sql  up.sql
migrations/2022-01-22-193007_register_user/: up.sql
migrations/2022-02-06-161024_sessions/: up.sql
src/: index.csv  lib.rs  main.rs  models.rs  schema.rs
