[package]
name = "filestore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
rocket = { version = "0.5.0-rc.1", features=["json"]}
multipart = "0.18.0"
rocket-multipart-form-data = "0.10.0"
serde_json = "1.0.74"
serde_derive = "1.0.133"
serde = "1.0.133"

